--- a/examples/vue-ts/src/assets/css/index.less
+++ b/examples/vue-ts/src/assets/css/index.less
@@ -3,3 +3,11 @@
 .less-demo {
   font-size: @font-size-base;
 }
+
+.bg-svg-css {
+  background-image: url('~@/assets/img/logo.svg');
+}
+
+.bg-png-css {
+  background-image: url('~@/assets/img/logo.png');
+}
